<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@id/fragmentBlog">

    <fragment
        android:id="@+id/fragmentBlog"
        android:name="com.example.mydiplom.FragmentBlog"
        android:label="@string/str_menu_see_blog"
        tools:layout="@layout/fragment_blog" />
    <fragment
        android:id="@+id/fragmentListFiles"
        android:name="com.example.mydiplom.FragmentListFiles"
        android:label="@string/str_menu_see_files"
        tools:layout="@layout/fragment_list_files" />
    <fragment
        android:id="@+id/fragmentListAddMarks"
        android:name="com.example.mydiplom.FragmentListAddMarks"
        android:label="@string/str_menu_add_mark"
        tools:layout="@layout/fragment_list_add_marks" />
    <fragment
        android:id="@+id/fragmentListStatisticMark"
        android:name="com.example.mydiplom.FragmentListStatisticMark"
        android:label="@string/str_menu_see_statistic"
        tools:layout="@layout/fragment_list_statistic_mark" />
    <fragment
        android:id="@+id/fragmentListReminders"
        android:name="com.example.mydiplom.FragmentListReminders"
        android:label="@string/str_menu_see_reminder"
        tools:layout="@layout/fragment_list_reminders" />
    <fragment
        android:id="@+id/fragmentProfile"
        android:name="com.example.mydiplom.FragmentProfile"
        android:label="@string/str_menu_see_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/fragmentArticleOfBlog"
        android:name="com.example.mydiplom.FragmentArticleOfBlog"
        android:label="Статья" />
    <fragment
        android:id="@+id/fragmentAddPrompt"
        android:name="com.example.mydiplom.FragmentAddPrompt"
        android:label="Добавление записи"
        tools:layout="@layout/fragment_add_prompt" />
    <fragment
        android:id="@+id/fragmentDetailedPrompt"
        android:name="com.example.mydiplom.FragmentDetailedPrompt"
        android:label="Просмотр записи"
        tools:layout="@layout/fragment_detailed_prompt" />
    <fragment
        android:id="@+id/fragmentAddNewRecordMark1number"
        android:name="com.example.mydiplom.FragmentAddNewRecordMark1number"
        android:label="fragment_add_new_record_mark_1number"
        tools:layout="@layout/fragment_add_new_record_mark_1number" />
    <fragment
        android:id="@+id/fragmentAddNewRecordMark2number"
        android:name="com.example.mydiplom.FragmentAddNewRecordMark2number"
        android:label="fragment_add_new_record_mark2number"
        tools:layout="@layout/fragment_add_new_record_mark2number" />
    <fragment
        android:id="@+id/fragmentAddNewRecordMarkEnum"
        android:name="com.example.mydiplom.FragmentAddNewRecordMarkEnum"
        android:label="fragment_add_new_record_mark_enum"
        tools:layout="@layout/fragment_add_new_record_mark_enum" />
</navigation>